--- a/licenses.html
+++ b/licenses.html
@@ -20,11 +20,11 @@
 <body class="top-navigation">
 
     <div id="wrapper">
-        <div id="page-wrapper" class="gray-bg">
+        <div id="page-wrapper" class="dark-bg">
 <!--MENU-->
-        <div class="row border-bottom white-bg">
+        <div class="row border-bottom gray-bg">
         <nav class="navbar navbar-expand-lg navbar-static-top" role="navigation">
-            <a href="#" class="navbar-brand"><img src="./img/logo1.png"></a>
+            <a href="#" class="navbar-brand"><img src="./img/logo.png"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fa fa-reorder"></i>
             </button>
